<resources>
    <string name="app_name">Grocery List</string>
    <string name="show_master">Show Master List</string>
    <string name="show_shopping_list">Show Shopping List</string>
    <string name="add_item">Add Item</string>
    <string name="clear_all">Clear All</string>
    <string name="delete_checked">Delete Checked</string>
    <string name="show_a_list_of_teams">Show a list of teams</string>
    <string name="show_the_teams_map_page">Show the Teams map page</string>
    <string name="show_the_settings_page">Show the Settings Page</string>
    <string name="team_list">Team List</string>
    <string name="team_settings">Team Settings</string>
    <string name="team_map">Team Map</string>
    <string name="favorite">Favorite</string>
    <string name="team_image">Team Image</string>
    <string name="toggleButton">OFF</string>
    <string name="save">Save</string>
    <string name="name">Product</string>
    <string name="enter_name">Enter Product:</string>
    <string name="show_a_list_of_the_teams">Show a list of the teams</string>
    <string name="off">OFF</string>
    <string name="is_on_shopping_list">Shopping List</string>
    <string name="shopping_list">Shopping List</string>
    <string name="cart_list">Cart List</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="isFavorite">Is Favorite</string>
    <string name="sort_by">Sort By</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete">Delete</string>
    <string name="newtext">New</string>
    <string name="team_map_page">Team Map Page</string>
    <string name="team_setting_page">Team Setting Page</string>
    <string name="_100">100%</string>
    <string name="sortby">Sort By</string>
    <string name="sort_order">Sort order</string>
    <string name="look_up">Look Up</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>
