<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/showMaster"
        android:orderInCategory="100"
        android:title="@string/show_master"
        android:icon="@drawable/baseline_home_24">
    </item>
    <item android:id="@+id/showShopList"
        android:orderInCategory="100"
        android:title="@string/show_shopping_list"
        android:icon="@drawable/baseline_filter_list_24">
    </item>
    <item android:id="@+id/addItem"
        android:orderInCategory="100"
        android:title="@string/add_item"
        android:icon="@drawable/baseline_add_24">
    </item>
    <item android:id="@+id/clearAll"
        android:orderInCategory="100"
        android:title="@string/clear_all"
        android:icon="@drawable/baseline_clear_24">
    </item>
    <item android:id="@+id/map"
        android:orderInCategory="100"
        android:title="@string/delete_checked"
        android:icon="@drawable/baseline_map_24">
    </item>
</menu>