<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_product_edit"
    android:background="@drawable/app_gradient"
    tools:context=".ProductEditActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/toolbar_background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/toolbar">
    <ToggleButton
        android:id="@+id/toggleButtonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_weight="1"
        android:checked="false"
        android:text="@string/toggleButton"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/save"/>
</LinearLayout>

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtProduct"
            android:text="@string/name"
            android:textSize="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etProduct"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@id/txtProduct"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/imageProduct"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/groceries_svgrepo_com" />

        <CheckBox
            android:id="@+id/chkShoppingList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/shopping_list"
            app:layout_constraintStart_toStartOf="@+id/etProduct"
            app:layout_constraintTop_toBottomOf="@+id/imageProduct" />

        <CheckBox
            android:id="@+id/chkCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginStart="240dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/cart_list"
            app:layout_constraintStart_toStartOf="@+id/etProduct"
            app:layout_constraintTop_toBottomOf="@+id/imageProduct"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>